fix: reduce modal overlay padding-top from 5vh to 2vh
Users felt modals were positioned too low. Reduced top offset to 2vh.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -275,7 +275,7 @@ select.form-input {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  padding-top: 5vh;
+  padding-top: 2vh;
 }
 
 .modal-overlay .modal {
